redactable/tests/ui/redacted_output_raw_string_rejected.stderr
error[E0599]: the method `redacted_output` exists for struct `String`, but its trait bounds were not satisfied
  --> tests/ui/redacted_output_raw_string_rejected.rs:11:22
   |
11 |     let _ = password.redacted_output();
   |                      ^^^^^^^^^^^^^^^
   |
  ::: $RUST/alloc/src/string.rs
   |
   | pub struct String {
   | ----------------- doesn't satisfy `String: DeclaredRedactable` or `String: RedactedOutputExt`
   |
   = note: the following trait bounds were not satisfied:
           `String: DeclaredRedactable`
           which is required by `String: RedactedOutputExt`
           `str: Sized`
           which is required by `str: RedactedOutputExt`
           `str: Redactable`
           which is required by `str: RedactedOutputExt`
           `str: Clone`
           which is required by `str: RedactedOutputExt`
           `str: DeclaredRedactable`
           which is required by `str: RedactedOutputExt`
